[package]
name = "tsuki"
description = "Lua 5.4 ported to Rust"
version = "0.3.2"
license = "MIT"
repository = "https://github.com/ultimaweapon/tsuki"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "lua"
harness = false

[features]
default = ["rand", "std"]
rand = ["dep:rand"]
std = ["libm/arch", "tsuki-macros/std"]

[dependencies]
libc = "0.2.172"
libm = { version = "0.2.15", default-features = false }
memchr = { version = "2.7.6", features = ["alloc"], default-features = false }
rand = { version = "0.9.1", features = ["thread_rng"], default-features = false, optional = true }
thiserror = { version = "2.0.12", default-features = false }
tsuki-macros = { version = "=0.1.3", path = "macros" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
mlua = { version = "0.11.3", features = ["async", "lua54", "vendored"] }
tokio = { version = "1.47.1", features = ["rt", "time"] }

[target.'cfg(windows)'.build-dependencies]
cc = "1.2.35"

[profile.bench]
debug = "full"

[workspace]
members = ["macros"]
