[package]
name = "tsuki"
description = "Lua 5.4 ported to Rust"
version = "0.4.8"
license = "MIT"
repository = "https://github.com/ultimaweapon/tsuki"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "lua"
harness = false

[features]
default = ["rand", "std"]

# Compile Lua bytecode to machine code with Cranelift. This is a preview feature and may contains
# memory bugs.
jit = ["std", "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-native", "dep:target-lexicon", "dep:windows-sys"]

rand = ["dep:rand"]
serde = ["dep:serde"]
std = ["libm/arch", "tsuki-macros/std"]

[dependencies]
cranelift-codegen = { version = "0.131.0", optional = true }
cranelift-frontend = { version = "0.131.0", optional = true }
cranelift-native = { version = "0.131.0", optional = true }
erdp = "0.2.0"
libc = "0.2.172"
libm = { version = "0.2.15", default-features = false }
memchr = { version = "2.7.6", features = ["alloc"], default-features = false }
rand = { version = "0.9.1", features = ["thread_rng"], default-features = false, optional = true }
serde = { version = "1.0.228", features = ["alloc"], default-features = false, optional = true }
target-lexicon = { version = "0.13.5", optional = true }
thiserror = { version = "2.0.12", default-features = false }
tsuki-macros = { version = "=0.1.3", path = "macros" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Memory", "Win32_System_SystemInformation"], optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
mlua = { version = "0.11.3", features = ["async", "lua54", "vendored"] }
tokio = { version = "1.47.1", features = ["rt", "time"] }

[profile.bench]
debug = "full"

[workspace]
members = ["macros"]
