[package]
name = "tsuki-macros"
description = "Procedural macros for Tsuki"
version = "0.1.3"
license = "MIT"
repository = "https://github.com/ultimaweapon/tsuki"
edition = "2024"

[lib]
proc-macro = true

[features]
std = []

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
